# libultrahdr

./: .clang-format  .gitignore  Android.bp  CMakeLists.txt  DESCRIPTION  LICENSE  LICENSE-MIT  README.md  gainmapmath.cpp  icc.cpp  jpegdecoderhelper.cpp  jpegencoderhelper.cpp  jpegr.cpp  jpegrutils.cpp  libuhdr.pc.template  multipictureformat.cpp  ultrahdr_api.h  utils.cmake
.github/workflows/: cifuzz.yml  cmake-single-platform.yml  cmake.yml  cmake_android.yml  cmake_linux.yml  cmake_mac.yml  cmake_win.yml
adobe-hdr-gain-map-license/: Android.bp  NOTICE
benchmark/: Android.bp  AndroidTest.xml  DynamicConfig.xml  benchmark_test.cpp
cmake/: FindEGL.cmake  FindOpenGLES3.cmake  cmake_uninstall.cmake.in  libuhdr.pc.in  package.cmake
cmake/toolchains/: aarch64-linux-gnu.cmake  android.cmake  arm-linux-gnueabihf.cmake  loong64-linux-gnu.cmake  riscv32-linux-gnu.cmake  riscv64-linux-gnu.cmake
docs/: building.md  fuzzers.md
examples/: Android.bp  ultrahdr_app.cpp
fuzzer/: Android.bp  README.md  ossfuzz.sh  ultrahdr_dec_fuzzer.cpp  ultrahdr_editor_fuzzer.cpp  ultrahdr_enc_fuzzer.cpp  ultrahdr_gainmapmath_fuzzer.cpp  ultrahdr_legacy_fuzzer.cpp  ultrahdr_metadata_fuzzer.cpp
include/ultrahdr/: gainmapmath.h  icc.h  jpegdecoderhelper.h  jpegencoderhelper.h  jpegr.h  jpegrerrorcode.h  jpegrutils.h  multipictureformat.h  ultrahdr.h  ultrahdrcommon.h
java/: UltraHdrApp.java  metadata.cfg
java/com/google/media/codecs/ultrahdr/: UltraHDRCommon.java  UltraHDRDecoder.java  UltraHDREncoder.java
java/jni/: com_google_media_codecs_ultrahdr_UltraHDRCommon.h  com_google_media_codecs_ultrahdr_UltraHDRDecoder.h  com_google_media_codecs_ultrahdr_UltraHDREncoder.h  ultrahdr-jni.cpp
lib/: gainmapmath.cpp  gainmapmath.h  icc.cpp  icc.h  jpegdecoderhelper.cpp  jpegdecoderhelper.h  jpegencoderhelper.cpp  jpegencoderhelper.h  jpegr.cpp  jpegr.h  jpegrutils.cpp  jpegrutils.h  multipictureformat.cpp  multipictureformat.h  ultrahdr.h
lib/include/ultrahdr/: agtm.h  editorhelper.h  gainmapmath.h  gainmapmetadata.h  icc.h  jpegdecoderhelper.h  jpegencoderhelper.h  jpegr.h  jpegrutils.h  multipictureformat.h  ultrahdr.h  ultrahdr_api.h  ultrahdrcommon.h
lib/include/ultrahdr/dsp/arm/: mem_neon.h
lib/src/: agtm.cpp  editorhelper.cpp  gainmapmath.cpp  gainmapmetadata.cpp  icc.cpp  jpegdecoderhelper.cpp  jpegencoderhelper.cpp  jpegr.cpp  jpegrutils.cpp  multipictureformat.cpp  ultrahdr_api.cpp
lib/src/dsp/arm/: editorhelper_neon.cpp  gainmapmath_neon.cpp
lib/src/dsp/riscv/: gainmapmath_rvv.cpp
lib/src/gpu/: applygainmap_gl.cpp  editorhelper_gl.cpp  uhdr_gl_utils.cpp
tests/: Android.bp  AndroidTest.xml  agtm_test.cpp  editorhelper_test.cpp  gainmapmath_test.cpp  gainmapmetadata_test.cpp  icchelper_test.cpp  jpegdecoderhelper_test.cpp  jpegencoderhelper_test.cpp  jpegr_test.cpp  ultrahdr_app.cpp
tests/data/: minnie-318x240.yu12  minnie-320x240.rgb  minnie-320x240.yu12  raw_p010_image_with_stride.p010  raw_yuv420_image.yuv420
third_party_libs/cmake/image_io/: CMakeLists.txt
